@@ -767,7 +767,7 @@
       <module id="orca"/>
       <module id="seahorse"/>
       <module id="seahorse-plugins"/>
-      <module id="sound-juicer"/>
+      <module id="sound-juicer" branch="gnome-2-24"/>
       <module id="swfdec-gnome"/>
       <module id="tomboy"/>
       <module id="totem" branch="gnome-2-24"/>
