@@ -1,3 +1,8 @@
+2008-09-04 Gil Forcada <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Sound-juicer branched for GNOME 2.24.
+
 2008-09-03  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in: Fixed bugzilla link for gst-* family.
